[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory-stack"
version = "1.0.0"
description = "Memory stack (Honcho + Qdrant + pgvector) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
  "qdrant-client>=1.7",
  "pgvector>=0.2",
  "httpx>=0.27",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.entry-points."hermes_agent.plugins"]
hermes_memory_stack = "hermes_memory_stack.plugin:memorystackPlugin"

[tool.setuptools.packages.find]
where = ["src"]
